# insertion-transfomer-pytorch

./: .gitignore  AGENTS.md  README.md  main.py  playground.ipynb  pyproject.toml  tokenizer.py
src/insertion_transformer/: cli.py  config.py  data.py  model.py  tokenizers.py  train.py
