[project]
name = "dna-insertion-transfomer-pytorch"
version = "0.1.0"
description = "Insertion Transformer implementation in PyTorch"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.3.5",
    "nvitop>=1.6.1",
    "torch>=2.9.1",
    "typer>=0.15.0",
]

[project.scripts]
insertion-transformer = "insertion_transformer.cli:app"

[tool.uv]
package = true

[tool.pyright]
venvPath = "."
venv = ".venv"
